--- a/style.css
+++ b/style.css
@@ -72,11 +72,14 @@
 
   --input-padding-x: 12px;
   --input-padding-y: 8px;
+  
 }
 
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     /*border: 1px solid black;*/
     
 }
@@ -90,6 +93,14 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
+}
+.magnify-glass,
+.bell,
+.account {
+  width: var(--icon-size);
+  height: var(--icon-size);
+  object-fit: contain;
+  display: block;
 }
 
 
@@ -242,6 +253,7 @@ header {
     height: 10rem;
     box-shadow: var(--shadow-md)
 }
+
 .search {
     display: flex;
     align-items: center;
@@ -255,16 +267,8 @@ header {
 }
 .magnify-glass {
     display: flex;
+    height: var(--input-height-sm);
     
-}
-.magnify-button {
-  all: unset;              
-  display: inline-flex;    
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  margin-top: 5px;
-  width: var(--input-height-sm)
 }
 #searchbox {
     outline: none;
@@ -280,37 +284,58 @@ header {
 #searchbox:hover {
     border: solid 1px var(--color-primary-hover)
 }
-
+.profile-right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    border: solid
+}
 .profile-use {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex: 1;
     padding: 5px;
 }
 .bell, .account{
     display: flex;
-    width: 20px;
+    height: calc(var(--input-height-sm)*0.9);
 }
+.name{
+    list-style: none;
+    text-decoration: none;
+    color: var(--text-heading);
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-lg)
+}
+
 .name-profile{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex: 1;
-    padding: 0px 5px;
+    padding: 0 clamp(1rem, 2vw, 4rem);
+    gap: 1rem;
 
 }
-
-
-
+.hello{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
 .account-lg{
     display: flex;
     justify-content: center;
     width: 40px;
-    margin-right: 10px;
 }
 .hi{
     display: flex;
 }
+.h2 {
+    color: var(--color-accent)
+}
+
 .profile-buttons{
     display: flex;
     justify-content: space-around;
