--- a/style.css
+++ b/style.css
@@ -83,261 +83,66 @@
     /*border: 1px solid black;*/
     
 }
-ul, li {
-    margin: 0;
-    padding: 0;
+
+.icon {
+    display: flex;
+    width: var(--space-xl)
 }
+
 body {
     display: grid;
-    grid-template: 1fr 5fr / 1fr 7fr;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
+    width: 100%;
+    grid-template: 2fr 6fr / 1fr 4fr;
 }
-.magnify-glass,
-.bell,
-.account {
-  width: var(--icon-size);
-  height: var(--icon-size);
-  object-fit: contain;
-  display: block;
-}
-
-
-
-
-
-.content {
-    grid-area: 2 / 2 / 3 / 3; 
+.sidebar {
     display: grid;
-    grid-template: 1fr 10fr 1fr 10fr/ 2fr 1fr;
-    min-height: 0;
-    min-width: 0;
-    
+    grid-area: 1 / 1 / 3 / 2;
+    grid-template: 2fr 5fr 1fr / 1fr;
 }
-
-li {
-    list-style-type: none;
+header{
+    display: grid;
+    grid-template: 1fr 1fr / 3fr 2fr;
+    grid-area: 1 / 2 / 2 / 3;
 }
-
-
-.heading-your-projects{
+.content{
+    display: grid;
+    grid-area: 2 / 2 / 3 / 3;
+    grid-template: 1fr 1fr / 3fr 1fr;
+}
+.main-sidebar-elements {
+    display: grid;
+    grid-area: 2 / 1 / 3 / 2;
+    grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr;
+}
+.search {
+    display: grid;
     grid-area: 1 / 1 / 2 / 2;
-    display: flex;
-    align-items: center;
-    padding: 5px;
+}
+.profile-use {
+    display: grid;
+    grid-area: 1 / 2 / 2 / 3;
+}
+.name-profile {
+    display: grid;
+    grid-area: 2 / 1 / 3 / 2;
+}
+.profile-buttons {
+    display: grid;
+    grid-area: 2 / 2 / 3 / 3;
+}
+.main-content {
+    display: grid;
+    grid-area: 1 / 1 / 2 / 3;
+}
+.content-top{
+    display: grid;
+    grid-area: 1 / 2 / 2 / 3;
+}
+.content-bottom{
+    display: grid;
+    grid-area: 2 / 2 / 3 / 3;
 }
 .your-projects {
     display: grid;
-    min-height: 0;
-    min-width: 0;
-    grid-area: 2 / 1 / 5 / 2;
     grid-template: 1fr 1fr 1fr/ 1fr 1fr;
-    padding: 20px;
-    justify-content: center;
-    gap: 10px;
-}
-
-.heading-announcements{
-    display: flex;
-    grid-area: 1 / 2 / 2 / 3;
-}
-
-.announcement-side {
-    display: grid;
-    grid-template: 1fr 1fr 1fr / 1fr;
-    grid-area: 2 / 2 / 3 / 3;
-}
-
-.heading-trending {
-    display: flex;
-    grid-area: 3 / 2 / 4 / 3;
-}
-
-.trending-people {
-    display: grid;
-    grid-template: 1fr 1fr 1fr 1fr / 1fr;
-    grid-area: 4 / 2 / 5 / 3;
-}
-
-/* hier beginnt das styling für die sidebar*/
-
-.sidebar {
-    display: grid;
-    grid-template: 1fr 1fr 8fr 2fr / 1fr;
-    grid-area: 1 / 1 / 3 / 2;
-    background-color: var(--bg-subtle); 
-}
-.test {
-    grid-area: 1 / 1 / 3 / 2;
-    height: 10rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px 2rem;
-    border-bottom: solid 1px var(--border-default);
-}
-.top-sidebar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-}
-.cloud {
-    display: flex;
-    width: 2rem; 
-    margin-right: 1rem;
-}
-.dashboard > a {
-    display: flex;
-    list-style: none;
-    color: var(--text-heading);
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-xl);
-    text-decoration: none;
-}
-
-.main-sidebar-elements{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-    grid-area: 3 / 1 / 3 / 2;
-    margin: 3rem 0px;
-    
-}
-.main-sidebar-elements > li {
-    display: flex;
-    justify-content: flex-start;
-    margin: 0px 2rem;
-}
-.main-sidebar-elements > li > a {
-    color: var(--color-primary);
-    list-style: none;
-    text-decoration: none;
-    font-weight: var(--fw-medium);
-    font-size: var(--fs-lg)
-}
-
-.settings-sidebar-elements {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    margin: 0px 2rem;
-    border-top: solid 1px var(--border-default);
-}
-.settings-sidebar-elements > li {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-.settings-sidebar-elements > li > a {
-    color: var(--color-primary);
-    list-style: none;
-    text-decoration: none;
-    font-weight: var(--fw-medium);
-    font-size: var(--fs-sm)
-}
-.sidebar > ul > li > a:hover {
-    color: var(--color-primary-hover);
-}
-
-/* hier beginnt das styling für den header */
-
-header {
-    display: grid;
-    grid-template: 1fr 3fr / 2fr 1.5fr;
-    grid-area: 1 / 2 / 2 / 3;
-    background-color: var(--bg-main);
-    height: 10rem;
-    box-shadow: var(--shadow-md)
-}
-
-.search {
-    display: flex;
-    align-items: center;
-}
-.form-search {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex: 1;
-    padding: 1rem;
-}
-.magnify-glass {
-    display: flex;
-    height: var(--input-height-sm);
-    
-}
-#searchbox {
-    outline: none;
-    border: solid 1px var(--border-default);
-    border-radius: var(--radius-sm);
-    height: var(--input-height-sm);
-    width: 80%;
-    box-shadow: var(--shadow-sm);
-}
-#searchbox:hover:focus {
-    border: solid 1px var(--focus-ring);
-}
-#searchbox:hover {
-    border: solid 1px var(--color-primary-hover)
-}
-.profile-right {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    border: solid
-}
-.profile-use {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex: 1;
-    padding: 5px;
-}
-.bell, .account{
-    display: flex;
-    height: calc(var(--input-height-sm)*0.9);
-}
-.name{
-    list-style: none;
-    text-decoration: none;
-    color: var(--text-heading);
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-lg)
-}
-
-.name-profile{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex: 1;
-    padding: 0 clamp(1rem, 2vw, 4rem);
-    gap: 1rem;
-
-}
-.hello{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-}
-.account-lg{
-    display: flex;
-    justify-content: center;
-    width: 40px;
-}
-.hi{
-    display: flex;
-}
-.h2 {
-    color: var(--color-accent)
-}
-
-.profile-buttons{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
