--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    list-style-type: none;
+    
     /*border: 1px solid black;*/
     
 }
@@ -92,38 +95,129 @@
 body {
     display: grid;
     width: 100%;
+    height: 100vh;
     grid-template: 2fr 6fr / 1fr 4fr;
+    padding: 8px;
+    
 }
 .sidebar {
     display: grid;
     grid-area: 1 / 1 / 3 / 2;
     grid-template: 2fr 5fr 1fr / 1fr;
+    background-color: var(--bg-main);
+    padding: 20px;
+    border: solid 1px var(--border-default);
+    border-radius: var(--radius-lg)
+}
+.test {
+    border-bottom: solid 1px var(--border-default);
+    
+}
+.top-sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    padding: 10px;
+}
+.dashboard > a{
+    list-style: none;
+    text-decoration: none;
+    color: var(--text-heading);
+    font-weight: var(--fw-bold);
 }
 header{
     display: grid;
     grid-template: 1fr 1fr / 3fr 2fr;
     grid-area: 1 / 2 / 2 / 3;
+    padding: 20px;
+    background-color: var(--bg-subtle);
+    box-shadow: var(--shadow-md);
+    border: solid 1px var(--border-default);
+    border-radius: var(--radius-lg)
+
 }
 .content{
     display: grid;
     grid-area: 2 / 2 / 3 / 3;
     grid-template: 1fr 1fr / 3fr 1fr;
+    padding: 20px;
+    border: solid 1px var(--border-default);
+    border-radius: var(--radius-lg);
+    background-color: var(--bg-surface);
 }
 .main-sidebar-elements {
     display: grid;
     grid-area: 2 / 1 / 3 / 2;
+    padding: 40px 0px;
+    text-align: center;
     grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr;
+    border-bottom: solid 1px var(--border-default);
 }
-.search {
+.main-sidebar-elements > li > a {
+    color: var(--color-primary);
+    font-weight: var(--fw-medium);
+    font-size: var(--fs-lg);   
+}
+.main-sidebar-elements > li > a:hover {
+    color: var(--color-primary-hover);
+}
+.settings-sidebar-elements {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+}
+.settings-sidebar-elements > li > a{
+    color: var(--color-primary);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-sm);
+}
+.settings-sidebar-elements > li > a {
+    color: var(--color-primary-hover);
+}
+.search > .form-search{
     display: grid;
     grid-area: 1 / 1 / 2 / 2;
+    grid-template: 1fr / 1fr 8fr;
+    padding-right: 20px;
+    height: 2.4rem;
+}
+.search-focus {
+    border: solid 1px var(--border-muted);
+    border-radius: var(--radius-md);
+    box-shadow: var(--shadow-md);
+    height: 2rem;
+}
+.magnify-glass:hover {
+    width: 2.1rem;
 }
 .profile-use {
     display: grid;
     grid-area: 1 / 2 / 2 / 3;
+    grid-template: 1fr /1fr 1fr 1fr;
+    margin-left: 50px;
 }
+
+.bell, .account {
+    width: 1.8rem;
+}
+.bell:hover, .account:hover {
+    width: 1.9rem;
+}
+.name {
+    color: var(--color-primary);
+    font-weight: var(--fw-medium);
+    font-size: var(--fs-base)
+}
+.name:hover {
+    color: var(--color-primary-hover);
+}
+
 .name-profile {
     display: grid;
+    grid-template: 1fr/ 1fr 8fr;
     grid-area: 2 / 1 / 3 / 2;
 }
 .profile-buttons {
