--- a/style.css
+++ b/style.css
@@ -138,15 +138,7 @@ header{
     border-radius: var(--radius-lg)
 
 }
-.content{
-    display: grid;
-    grid-area: 2 / 2 / 3 / 3;
-    grid-template: 1fr 1fr / 3fr 1fr;
-    padding: 20px;
-    border: solid 1px var(--border-default);
-    border-radius: var(--radius-lg);
-    background-color: var(--bg-surface);
-}
+
 .main-sidebar-elements {
     display: grid;
     grid-area: 2 / 1 / 3 / 2;
@@ -219,24 +211,108 @@ header{
     display: grid;
     grid-template: 1fr/ 1fr 8fr;
     grid-area: 2 / 1 / 3 / 2;
+    gap: 20px;
+    align-items: center;
 }
 .profile-buttons {
     display: grid;
     grid-area: 2 / 2 / 3 / 3;
+    grid-template: 1fr / 1fr 1fr 1fr;
+    gap: 20px;
+    align-items: center;
+}
+.profile-buttons > button {
+    padding: 20px;
+    border: solid 1px var(--border-default);
+    border-radius: var(--radius-md);
+    background-color: var(--bg-surface);
+    color: var(--text-body);
+}
+.profile-buttons > button:hover{
+    border: solid 1px var(--color-primary-hover);
+}
+
+.content{
+    display: grid;
+    grid-area: 2 / 2 / 3 / 3;
+    grid-template: 1fr 1fr / 3fr 1fr;
+    padding: 20px;
+    gap: 20px;
+    border: solid 1px var(--border-default);
+    border-radius: var(--radius-lg);
+    background-color: var(--bg-surface);
 }
 .main-content {
     display: grid;
-    grid-area: 1 / 1 / 2 / 3;
+    gap: 20px;
+    grid-area: 1 / 1 / 2 / 2;
+    grid-template: 1fr 4fr / 1fr;
+
 }
-.content-top{
+.main-content > p {
+    grid-area: 1 / 1 / 2 / 2;
+    display: flex;
+    border: solid 1px var(--border-default);
+    align-items: center;
+    justify-content: center;
+    color: var(--text-body);
+    font-size: var(--fs-md);
+    font-weight: var(--fw-medium);
+}
+.your-projects {
+    display: grid;
+    grid-area: 2 / 1 / 3 / 2;
+    grid-template: 1fr 1fr 1fr/ 1fr 1fr;
+    gap: 10px;
+}
+.your-projects > div {
+    display: flex;
+    border: solid 1px var(--border-default);
+    border-radius: var(--radius-md);
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-subtle);
+    box-shadow: var(--shadow-md);    
+}
+.your-projects > div:hover {
+    background-color: var(--color-primary-hover);
+}
+.content-top, .content-bottom{
     display: grid;
     grid-area: 1 / 2 / 2 / 3;
+    grid-template: 1fr 4fr / 1fr;
+}
+.content-top > p, .content-bottom > p {
+    grid-area: 1 / 1 / 2 / 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-primary);
+    font-size: var(--fs-md);
+    font-weight: var(--fw-bold);
+}
+.content-top > div, .content-bottom > div{
+    grid-area: 2 / 1 / 3 / 2;
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr;
+    gap: 10px;
+}
+.content-bottom > div {
+    grid-template: 1fr 1fr 1fr 1fr / 1fr;
+}
+.content-top > div > div, .content-bottom > div > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 1px var(--border-muted);
+    border-radius: var(--radius-lg);
+    padding: 6px;
+    color: var(--text-body);
+}
+.content-top > div > div:hover, .content-bottom > div > div:hover{
+    border-color: var(--color-primary-hover)
 }
 .content-bottom{
     display: grid;
     grid-area: 2 / 2 / 3 / 3;
-}
-.your-projects {
-    display: grid;
-    grid-template: 1fr 1fr 1fr/ 1fr 1fr;
 }
